<resources>
    <string name="app_name">MyAndroidApp</string>
    <string name="textview_1">Text View 1</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="empty">Empty</string>
    <string name="move_to_recycler_view">Move to Recycler View</string>
    <string name="move_to_fragments">Move to Fragment view</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="open_calculator">Open Calculator</string>
    <string name="error">Error</string>
    <string name="open_input_form">Open Input form</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="save_data">Save Data</string>
    <string name="view_input_data">View Input Data</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="gender">Gender</string>
    <string name="create_a_new_one">Create a new one</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="continue_with_existing_account">Continue with existing account</string>
    <string name="already_have_account">Already have account?</string>
    <string name="get_random_programming_joke">Get Random Programming Joke</string>
    <string name="get_random_joke">Get Random Joke</string>
    <string name="get_10_random_jokes">Get 10 Random Jokes</string>
    <string name="view_all_jokes">View All Jokes</string>
    <string name="get_random_joke_by_type">Get Random Joke By Type</string>
    <string name="choose_the_type_of_joke">Choose the type of Joke</string>
    <string name="general">General</string>
    <string name="programming">Programming</string>
    <string name="click_to_view_punchline">Click to view punchline</string>
</resources>